@@ -1,4 +1,4 @@
-/* $OpenBSD: packet.c,v 1.134 2006/07/10 16:37:36 stevesk Exp $ */
+/* $OpenBSD: packet.c,v 1.135 2006/07/11 20:07:25 stevesk Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -47,6 +47,7 @@
 #include <netinet/in.h>
 #include <netinet/ip.h>
 
+#include <errno.h>
 #include <stdarg.h>
 
 #include "xmalloc.h"
