@@ -1,4 +1,4 @@
-/* $OpenBSD: sftp-client.c,v 1.66 2006/07/09 15:15:11 stevesk Exp $ */
+/* $OpenBSD: sftp-client.c,v 1.67 2006/07/11 20:07:25 stevesk Exp $ */
 /*
  * Copyright (c) 2001-2004 Damien Miller <djm@openbsd.org>
  *
@@ -27,6 +27,7 @@
 # include <sys/stat.h>
 #endif
 
+#include <errno.h>
 #include <fcntl.h>
 #include <signal.h>
 
